# VychMatLab5

./: CMakeLists.txt  README.md
cmake/: CMakeCache.txt  Makefile  cmake_install.cmake  lab  output
include/: methods.h  window.h
src/: main.cpp  methods.cpp  window.cpp
